--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-requests
-mysql.connector-python
+requests~=2.23.0
+mysql-connector-python~=8.0.19
 kivy.deps.sdl2
 kivy.deps.glew
 docutils
 pygments
 pypiwin32
-kivy
+kivy~=1.11.1
+
 
