--- a/requirementsLinux.txt
+++ b/requirementsLinux.txt
@@ -2,7 +2,7 @@ certifi==2020.12.5
 chardet==4.0.0
 docutils==0.17.1
 idna==2.10
-Kivy==2.0.0
+Kivy
 Kivy-Garden==0.1.4
 mysql-connector-python==8.0.24
 Pillow==8.2.0
