--- a/requirementswin.txt
+++ b/requirementswin.txt
@@ -2,7 +2,7 @@ certifi==2020.12.5
 chardet==4.0.0
 docutils==0.17
 idna==2.10
-Kivy==2.0.0
+Kivy
 kivy-deps.angle==0.3.0
 kivy-deps.glew==0.3.0
 kivy-deps.sdl2==0.3.1
